# a_fraud_preventing_timetable_for_round_robin_tournaments

./: README.md  main.js  package.json  visualization-html.js
cpp/: CMakeLists.txt  Configuration.cpp  Configuration.h  ELOPredictor.cpp  ELOPredictor.h  Predictor.cpp  Predictor.h  TriplePredictor.cpp  TriplePredictor.h  main.cpp
cpp/calculation/: FVCalculation.cpp  FVCalculation.h  SimulatedFVCalculation.cpp  SimulatedFVCalculation.h
cpp/helpers/: Data.cpp  Data.h  JSON.cpp  JSON.h
cpp/optimization/: ExactHigestFirstMappingOptimization.cpp  ExactHigestFirstMappingOptimization.h  ExactHighestLastMappingOptimization.cpp  ExactHighestLastMappingOptimization.h  Optimization.cpp  Optimization.h  RandomizeMapping.cpp  RandomizeMapping.h
cpp/priceFunctions/: DropPriceFunction.cpp  DropPriceFunction.h  EqualPriceFunction.cpp  EqualPriceFunction.h  InverseExponentialPriceFunction.cpp  InverseExponentialPriceFunction.h  LinearPriceFunction.cpp  LinearPriceFunction.h  PriceFunction.cpp  PriceFunction.h  TopThreePriceFunction.cpp  TopThreePriceFunction.h  WinnerTakesAllPriceFunction.cpp  WinnerTakesAllPriceFunction.h
example_data/: in.json
example_data/data/: elo.csv  mapping.csv  schedule.csv  teamSelection_2_groups.csv  teamSelection_linear.csv
